# gaff2kme

./: .gitignore  README.md  pyproject.toml
src/gaff2kme/: __init__.py  cli.py  extraction.py  math.py  pipeline.py
src/gaff2kme/backends/: __init__.py  radonpy_backend.py  rdkit_lite.py
src/gaff2kme/ff_dat/: __init__.py  gaff2_mod.json
tests/: test_alkyne_issue.py  test_backends.py  test_bond_type_fallback.py  test_extraction.py  test_math.py  test_pipeline.py  test_sanitize_fallback.py
