[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaff2kme"
version = "0.1.0"
description = "Convert SMILES to 190-dim KME descriptors using GAFF2_mod force field"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
gaff2kme = "gaff2kme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
